--- a/app/views/notes-tool-5-0/assessment-notes.html
+++ b/app/views/notes-tool-5-0/assessment-notes.html
@@ -209,7 +209,11 @@ Case notes for {{data['child'] or "Child A"}} - GOV.UK
 					{% endif %}
 
 					<p>
-						<a href="event?id={{event.id}}">View {{"event" if event['type'] != 'Note' else 'note' }}</a>
+						{% if event['type'] == 'Note' %}
+						<a href="note?id={{event.id}}">View note</a>
+						{% else %}
+						<a href="event?id={{event.id}}">View event</a>
+						{% endif %}
 					</p>
 				</div>
 			</li>
